# friday

./: .config_updated  .env.example  .gitignore  CLI.md  EXTENSIONS.md  FRIDAY_MANIFEST.md  Friday_Builder_Spec.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  __init__.py  _check_fastapi.py  _debug_authority.py  _diagnose.py  _diagnose2.py  _diagnose3.py  add_agent_decls.py  add_all_tools.py  add_ds.py  add_imports.py  add_tools_clean.py  advanced_analytics.py  advanced_crypto.py  advanced_networking.py  alexa_skill_model.json  alexa_webhook_server.py  augmented_reality.py  auto_update.py  benchmark_models.py  benchmark_results.json  benchmark_vision_models.py  bioinformatics.py  blockchain.py  browser_history_tools.py  build_tools.py  check_live.py  coding_agent.py  compiler_lang.py  (+152 more)
.opencode/: summary.md
api/: __init__.py  dashboard_routes.py
archive/: advanced_crypto.py  advanced_networking.py  augmented_reality.py  auto_update.py  coding_agent.py  compiler_lang.py  iot_edge.py  model_scout.py  nlp_enhancement.py  quick_scout.py  reinforcement_learning.py  speech_synthesis.py
capabilities/: __init__.py  filesystem.py  screenshot.py  system_info.py  terminal.py
chroma_db/: chroma.sqlite3
dashboard/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/: ARCHITECTURE.md  AUTHORITY.md  AUTONOMY.md  CAPABILITIES.md  DASHBOARD.md  IRONMAN_FEATURES.md  MEMORY.md  SIDECARS.md  SNAPSHOTS.md
friday/: __init__.py  __main__.py  _build_osint.py  _paths.py  _singletons.py  agent_bus.py  agent_chat.py  ai.py  api.py  (+188 more)
(+285 files in other folders)
